fix icon-phone hover on mobile

--- a/src/styles/blocks/top-bar.scss
+++ b/src/styles/blocks/top-bar.scss
@@ -8,8 +8,10 @@
   &__phone-wrapper {
     position: relative;
 
-    &:hover .contacts--align-right {
-      opacity: 1;
+    @include onTablet {
+      &:hover .contacts--align-right {
+        opacity: 1;
+      }
     }
   }
 
